--- a/jqclickandbind.html
+++ b/jqclickandbind.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
-
+    <script src="./libs/jquery-3.6.0.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        console.log("hey");
+    </script>
 </body>
 
 </html>
