--- a/jqclickandbind.html
+++ b/jqclickandbind.html
@@ -6,9 +6,22 @@
 </head>
 
 <body>
+
+
+
+
+
+
+
+
     <script src="./libs/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         console.log("hey");
+
+        //jquery
+        $(document).ready(() => {
+
+        });
     </script>
 </body>
 
