--- a/jqclickandbind.html
+++ b/jqclickandbind.html
@@ -7,20 +7,31 @@
 
 <body>
 
+    <h1>Welcome To JQuery</h1>
+    <h1>This is awesome js library.</h1>
 
-
-
-
-
+    <button type="button" id="clickme">Click Me</button>
+    <button type="button" id="singleclick">Single Click Me</button>
+    <button type="button" id="doubleclk">Double Click Me</button>
 
 
     <script src="./libs/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-        console.log("hey");
+        // console.log("hey");
 
         //jquery
         $(document).ready(() => {
+            $("#clickme").click('click', function() {
+                console.log("i am working by click method");
+            });
 
+            $("#singleclick").bind('click', function() {
+                console.log("i am single click by bind method")
+            });
+
+            $("#doubleclk").bind('dblclick', function() {
+                console.log("i am double click by bind method " + "[" + this.nodeName + "]");
+            });
         });
     </script>
 </body>
