--- a/jq2html.html
+++ b/jq2html.html
@@ -6,8 +6,28 @@
 </head>
 
 <body>
+
+    <h1>welcome to jquery.</h1>
+    <p>this is awesome js library.</p>
+    <button id="clickme">click me</button>
+
+
+
+
+
     <script src="./libs/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+        $(document).ready(function() {
+            console.log($("h1").html());
+            console.log($("p").html());
+            console.log($('button').html());
+
+            $('#clickme').bind('click', function() {
+                // $('h1').html("hello jquery.");
+                $('h1').html("Hello <i style='color:red;'>jQuery</i>");
+            });
+
+        });
     </script>
 </body>
 
