--- a/jq3text.html
+++ b/jq3text.html
@@ -7,14 +7,61 @@
 
 <body>
     <h1>this is awesome <u>js library.</u></h1>
-    <h1></h1>
+    <h1>save myanmar</h1>
+    <h1>pray myanmar.</h1>
 
+    <hr/>
+
+    <h2>this is awesome <u>js library.</u></h2>
+    <h2>save myanmar.</h2>
+    <h2>pray myanmar.</h2>
+
+    <hr/>
+
+    <h3>this is awesome <u>js library.</u></h3>
+    <h3>save myanmar.</h3>
+    <h3>pray myanmar.</h3>
+
+    <hr/>
+
+    <h4>this is awesome <u>js library.</u></h4>
+    <h4>save myanmar.</h4>
+    <h4>pray myanmar.</h4>
 
     <script src="./libs/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+        //html to html
         $(document).ready(function() {
-            const getfirsth1 = $('h1:first').html();
+
+            // const getfirsth1 = $('h1:first').html();
+            // $('h1:last').html(getfirsth1);
+
+            var getfirsth1 = $('h1:first').html();
+            console.log(getfirsth1);
             $('h1:last').html(getfirsth1);
+        });
+
+        //text() to text()
+        $(document).ready(function() {
+
+            // console.log($('h2').html());
+            // console.log($('h2').text());
+
+            const getfirsth2 = $('h2:first').text();
+            console.log(getfirsth2);
+            $("h2:last").text(getfirsth2);
+        });
+
+        // html() to text()
+        $(document).ready(function() {
+            let getfirsth3 = $('h3:first').html();
+            $("h3:last").text(getfirsth3);
+        });
+
+        // text() to html()
+        $(document).ready(function() {
+            let getfirsth4 = $('h4:first').text();
+            $('h4:last').html(getfirsth4);
         });
     </script>
 </body>
